# iot_monitor_project

./: README.md  docker-compose.yml
consumer/: Dockerfile  app.py  pyproject.toml  wait-for-services.sh
exports/: sensores_2025-05-29.csv
producer/: Dockerfile  app.py  pyproject.toml
